<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Azil</string>

    <!-- Buttons -->
    <string name="btnLogin">Prijava</string>
    <string name="btnLogout">Odjava</string>
    <string name="btnPrikaz">Prikaz svih skloništa</string>
    <string name="btnZivotinje">Prikaz svih životinja</string>
    <string name="btnFilter">Pretraži</string>
    <string name="btnDonacije">Doniraj ♡</string>
    <string name="btnNastavak">Nastavak</string>
    <string name="btnPosalji">Pošalji</string>
    <string name="btnBack">Nazad</string>
    <string name="btnDelete">Obriši</string>
    <string name="btnSave">Spremi</string>
    <string name="btnCancel">Odustani</string>
    <string name="btnPrikazSkloniste">Administracija skloništa</string>
    <string name="btnPrikazDonacije">Uređivanje donacija</string>
    <string name="btnAdd">Dodaj</string>
    <string name="btnAddImg">Dodaj sliku</string>
    <string name="btnEditImg">Promijeni sliku</string>
    <string name="btnReceivedDonations">Primljene donacije</string>
    <string name="btnRequests">Zahtjevi za udomljavanje</string>
    <string name="btnStat">Statistika</string>
    <string name="btnGrafVrste">Vrste životinja</string>
    <string name="btnGrafPasmine">Pasmine</string>
    <string name="btnGrafLokacije">Lokacije pronalaska</string>
    <string name="btnGrafVrijeme">Mjesec pronalaska</string>
    <string name="btnGrafPasmineLokacije">Pasmine - najčešće lokacije</string>
    <string name="btnGrafPasmineVrijeme">Pasmine - najčešći mjesec</string>

    <!-- Txt, placeholders, or whatever -->
    <string name="helperMain">Skloništa za životinje u RH</string>
    <string name="helper_inputUsername">Korisničko ime</string>
    <string name="helper_inputEmail">Email adresa</string>
    <string name="helper_inputPassword">Lozinka</string>
    <string name="helper_inputPassword2">Potvrdite lozinku</string>
    <string name="helper_forgotPassword">Zaboravili ste lozinku?</string>
    <string name="helper_register">Novi ste ovdje? Registrirajte se.</string>
    <string name="helper_reg">Registracija</string>
    <string name="helper_inputAccessKey">Pristupni ključ</string>
    <string name="helper_accessKeyInfo">Pristupni ključ koristi se kako bi se spriječio broj zlonamjernih/bespotrebnih registracija.
    U slučaju da ne posjedujete pristupni ključ, obratite se na email adresu: azil@gmail.com.
        Molimo priložite dokumente o posjedovanju i radu svoga skloništa.</string>
    <string name="helper_log">Prijava</string>
    <string name="helper_search">Pretraga</string>
    <string name="helper_skloniste">Donacije skloništa:\n%1$s</string>
    <string name="helper_adresa">Adresa: </string>
    <string name="helper_grad">Grad: </string>
    <string name="helper_oib">OIB: </string>
    <string name="helper_iban">IBAN: </string>
    <string name="helper_dostupnihmjesta">Dostupnih mjesta: </string>
    <string name="helper_kontakt">Kontakt: </string>
    <string name="helper_ime">Ime: </string>
    <string name="helper_opis">Opis: </string>
    <string name="helper_edit">Uredi detalje skloništa</string>
    <string name="helper_kolicina" tools:ignore="ExtraTranslation">Količina: </string>
    <string name="helper_imePrezime">Ime i prezime: </string>
    <string name="helper_email">Email: </string>
    <string name="helper_komentar">Komentar: </string>
    <string name="helper_komentarHelp">Npr. datum i vrijeme dolaska, tko će nam sve doći,\nili nešto drugo!☺</string>
    <string name="helper_deletionWarning">Brisanje skloništa je nepovratno!\nSvi podaci vezani uz sklonište, kao i vaš račun,
        bit će obrisani u potpunosti. Jeste li sigurni da želite nastaviti?</string>
    <string name="helper_odaberigraf">GRAFOVI</string>
    <string name="helper_odaberistat">STATISTIKA</string>
    <string name="helper_odaberiVrstu">Odaberite vrstu</string>
    <string name="helper_odaberiPasminu">Odaberite pasminu</string>
    <string name="helper_odaberiLokaciju">Odaberite lokaciju</string>
    <string name="helper_odaberiMjesec">Odaberite mjesec</string>
    <string name="helper_vrsta">Vrsta: </string>
    <string name="helper_pasmina">Pasmina: </string>
    <string name="helper_lokacija">Lokacija: </string>
    <string name="helper_mjesec">Mjesec: </string>
    <string name="helper_vremenski">Trenutni godišnji prosjek životinja u skloništima: </string>
    <string name="helper_vrste">Omjer pasa i mačaka u skloništima: </string>
    <string name="helper_lokacije">Srednja vrijednost broja životinja po lokacijama: </string>
    <string name="helper_pasmine">Srednja vrijednost broja životinja po pasminama: </string>
    <string name="helper_pasmineMod">Najčešći broj životinja u skloništima po pasminama: </string>

    <string name="holder_Naziv">_Naziv skloništa_</string>
    <string name="holder_Adresa">_Adresa_</string>
    <string name="holder_Grad">_Grad_</string>
    <string name="holder_Oib">_Oib_</string>
    <string name="holder_Iban">_Iban_</string>
    <string name="holder_DostupnihMjesta">_Broj dostupnih mjesta_</string>
    <string name="holder_Kontakt">_Kontakt/admin email_</string>
    <string name="holder_Ime">_Ime životinje_</string>
    <string name="holder_Pasmina">_Pasmina životinje_</string>
    <string name="holder_Lokacija">_Lokacija životinje_</string>
    <string name="holder_Mjesec">_Mjesec pronalaska životinje_</string>
    <string name="holder_Opis">_Opis životinje_</string>
    <string name="holder_Skloniste">_Skloniste_</string>
    <string name="holder_OpisDonacije">_Opis donacije_</string>
    <string name="holder_KolicinaDonacije">_Količina donacije_</string>
    <string name="holder_helloAdmin">Pozdrav, %1$s!</string>
    <string name="holder_ImePrezime">_Ime i prezime_</string>
    <string name="holder_Email">_Email adresa_</string>
    <string name="holder_Datum">_Datum_</string>
    <string name="holder_Komentar">_Komentar_</string>
    <string name="holder_OdabranaDonacija">Odabrali ste donaciju:\n%1$s (%2$s)</string>
    <string name="holder_OdabranaZivotinja">%1$s vas čeka!\nDođite na našu adresu i upoznajte se.</string>
    <string name="holder_Rand">Molimo unesite podatke kako bismo bili spremni za vašu posjetu. Hvala!</string>
    <string name="holder_Optional">*Opcionalno</string>
    <string name="holder_Naslov">Statistički prikaz podataka</string>
    <string name="holder_Vremenski">_Godišnji prosjek_</string>
    <string name="holder_Lokacije">_Lokacije_</string>
    <string name="holder_Vrste">_Vrste omjer_</string>
    <string name="holder_Pasmine">_Pasmine_</string>
</resources>