<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_centerVertical="true"
    android:background="@drawable/textlines">

    <TextView
        android:id="@+id/tvNaziv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/holder_Naziv"
        android:textSize="20sp"
        android:textColor="#222222"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvAdresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/holder_Adresa"
            android:textColor="#2E2E2E" />

        <TextView
            android:id="@+id/tvGrad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/holder_Grad"
            android:textAlignment="textEnd"
            android:textColor="#393939" />
    </LinearLayout>

</LinearLayout>