<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8CDC2B9"
    tools:context=".Activities.SheltersActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tvNaziv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holder_Naziv"
                android:textAlignment="center"
                android:textColor="#222222"
                android:textSize="24sp" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/helper_Adresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/helper_adresa"
                    android:textSize="18sp"
                    android:textColor="#222222" />
                <TextView
                    android:id="@+id/tvAdresa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_Adresa"
                    android:textSize="18sp"
                    android:textColor="#222222" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/line" >

                <TextView
                    android:id="@+id/helper_Grad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/helper_grad"
                    android:textSize="18sp"
                    android:textColor="#222222" />
                <TextView
                    android:id="@+id/tvGrad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_Grad"
                    android:textSize="18sp"
                    android:textColor="#222222" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/helper_OIB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/helper_oib"
                    android:textSize="16sp"
                    android:textColor="#222222" />
                <TextView
                    android:id="@+id/tvOib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_Oib"
                    android:textSize="16sp"
                    android:textColor="#222222" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:background="@drawable/line" >

                <TextView
                    android:id="@+id/helper_Iban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/helper_iban"
                    android:textSize="16sp"
                    android:textColor="#222222" />
                <TextView
                    android:id="@+id/tvIban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_Iban"
                    android:textSize="16sp"
                    android:textColor="#222222" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/helper_dostupnihmjesta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/helper_dostupnihmjesta"
                    android:textSize="16sp"
                    android:textColor="#222222" />
                <TextView
                    android:id="@+id/tvDostupnihMjesta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_DostupnihMjesta"
                    android:textSize="16sp"
                    android:textColor="#222222" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/helper_Kontakt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/helper_kontakt"
                    android:textSize="16sp"
                    android:textColor="#222222" />
                <TextView
                    android:id="@+id/tvKontakt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/holder_Kontakt"
                    android:textSize="16sp"
                    android:textColor="#222222" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayoutShelters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search_white" />

            <EditText
                android:id="@+id/search_animals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/helper_search"/>
        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:id="@+id/relativeLayoutShelters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:orientation="vertical"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        tools:listitem="@layout/animal_item"
                        android:id="@+id/rvAnimals"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>