<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ShelterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#DC0000"
            android:text="@string/btnDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_edit_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDelete"
            app:layout_constraintVertical_bias="0.050">

            <LinearLayout
                android:id="@+id/linearFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/relativeLayoutNaziv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tvNaziv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/holder_Naziv"
                        android:textAlignment="center"
                        android:textColor="#222222"
                        android:textSize="20sp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="7dp"
                    android:layout_marginBottom="7dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/helper_Adresa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp"
                            android:text="@string/helper_adresa"
                            android:textColor="#222222"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tvAdresa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holder_Adresa"
                            android:textColor="#222222"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/line"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/helper_Grad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp"
                            android:text="@string/helper_grad"
                            android:textColor="#222222"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tvGrad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holder_Grad"
                            android:textColor="#222222"
                            android:textSize="17sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/helper_OIB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp"
                            android:text="@string/helper_oib"
                            android:textColor="#222222"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvOib"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holder_Oib"
                            android:textColor="#222222"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/line"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/helper_Iban"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp"
                            android:text="@string/helper_iban"
                            android:textColor="#222222"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvIban"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holder_Iban"
                            android:textColor="#222222"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/helper_dostupnihmjesta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp"
                            android:text="@string/helper_dostupnihmjesta"
                            android:textColor="#222222"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvDostupnihMjesta"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holder_DostupnihMjesta"
                            android:textColor="#222222"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/helper_Kontakt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="10dp"
                            android:text="@string/helper_kontakt"
                            android:textColor="#222222"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvKontakt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/holder_Kontakt"
                            android:textColor="#222222"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>